--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "expo": "~54.0.27",
     "expo-blur": "~15.0.8",
     "expo-camera": "~17.0.10",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.11",
+    "expo-crypto": "~15.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -31,6 +33,7 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
+    "expo-media-library": "~18.2.1",
     "expo-router": "~6.0.17",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.12",
