--- a/admin/vercel.json
+++ b/admin/vercel.json
@@ -1,20 +1,24 @@
 {
   "version": 2,
-  "name": "beauty-admin-template-sync",
+  "name": "resulta-admin",
   "builds": [
     {
-      "src": "template-sync.html",
+      "src": "*.html",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/",
+      "src": "/admin",
       "dest": "/template-sync.html"
     },
     {
-      "src": "/template-sync",
+      "src": "/admin/(.*)",
       "dest": "/template-sync.html"
+    },
+    {
+      "src": "/",
+      "dest": "/index.html"
     }
   ]
 }
