--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "bunx rork start -p vpmdxws68ya3mq23gsgwn --tunnel",
     "start-web": "bunx rork start -p vpmdxws68ya3mq23gsgwn --web --tunnel",
     "start-web-dev": "DEBUG=expo* bunx rork start -p vpmdxws68ya3mq23gsgwn --web --tunnel",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -19,7 +21,10 @@
     "@ungap/structured-clone": "^1.3.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.31",
+    "expo-apple-authentication": "^8.0.8",
+    "expo-application": "~7.0.8",
     "expo-blur": "~15.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
@@ -37,6 +42,7 @@
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-superwall": "^1.0.0",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
@@ -48,7 +54,6 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.2"
