--- a/admin/vercel.json
+++ b/admin/vercel.json
@@ -9,6 +9,14 @@
   ],
   "routes": [
     {
+      "src": "/privacy",
+      "dest": "/privacy.html"
+    },
+    {
+      "src": "/terms",
+      "dest": "/terms.html"
+    },
+    {
       "src": "/admin",
       "dest": "/template-sync.html"
     },
