--- a/admin/vercel.json
+++ b/admin/vercel.json
@@ -17,6 +17,10 @@
       "dest": "/terms.html"
     },
     {
+      "src": "/data-deletion",
+      "dest": "/data-deletion.html"
+    },
+    {
       "src": "/admin",
       "dest": "/template-sync.html"
     },
