Update admin panel: add support page and update configuration

--- a/admin/vercel.json
+++ b/admin/vercel.json
@@ -21,6 +21,10 @@
       "dest": "/data-deletion.html"
     },
     {
+      "src": "/support",
+      "dest": "/support.html"
+    },
+    {
       "src": "/admin",
       "dest": "/template-sync.html"
     },
