--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.475.0",
     "posthog-react-native": "^4.19.0",
+    "posthog-react-native-session-replay": "^1.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
