--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "expo-superwall": "^1.0.1",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-tracking-transparency": "~6.0.8",
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.475.0",
     "posthog-react-native": "^4.19.0",
